Revision history for Perl module Net::WebSocket

0.11 Sun Dec 17 2017
- (Really) fix “large” frame size encoding on 32-bit perls, add test.
- Check for warnings in tests.

0.1 Fri Dec 15 2017
- MINOR BREAKING: All messages are now Net::WebSocket::Message instances;
  the ::text and ::binary subclasses are removed. They weren’t useful, and
  they complicated support for custom frame/message types.
- Fix frame RSV methods, and add tests.
- Fix Endpoint auto-response to close frames to use the correct masking.
- Use exception objects for remaining server handshake problems.
- Make Sec-WebSocket-Key validation more accurate.
- New, separate exception type for when a data frame arrives after an
  unfinished message.
- is_control_frame() method is renamed to is_control().
  (The old name is also preserved for legacy compatibility.)
  Message objects have the same method, so now frames and messages are
  more nearly interchangeable.
- Lots of inert code is now removed.
- Lots of tests added, especially against Endpoint and Handshake.
- Ping messages now count from 1 rather than 0.
- This file is now in chronological-descending order.

0.063 Wed Dec 13 2017
- Fix frame ->to_bytes() logic for large frames on 32-bit perls.

0.062 Wed Dec 13 2017
- Fix Parser.pm bug that corrupted parsed frames’ to_bytes() representation.
- Fix compatibility with reader objects that don’t die() on empty read.
- Fix spurious warnings when creating close frames via code/reason.
- Add SERVICE_RESTART, TRY_AGAIN_LATER, and BAD_GATEWAY statuses.
- Remove more old/inaccurate documentation in Endpoint.pm.
- Clarify (intended) divergence from RFC vis-à-vis 1005 status codes.
- Document do_not_die_on_close().

0.061 Thu Nov 30 2017
- Copyright update
- A few other documentation tweaks

0.06 Thu Nov 30 2017
- Normalize naming conventions for frame classes.
- Have frames receive “payload” instead of “payload_sr”.

0.054 Wed Nov 29 2017
- Use Digest::SHA1 instead of Digest::SHA (SHA1 is lighter)