@@ -16,7 +16,8 @@ sub _new {
 
     my $value_str = defined($value) ? $value : q<>;
 
-    my $str = length($why) ? "Bad “$name” header ($value_str): $why" : "Bad “$name” header ($value_str)";
+    #Perl 5.10 still warns on length(undef)
+    my $str = defined($why) && length($why) ? "Bad “$name” header ($value_str): $why" : "Bad “$name” header ($value_str)";
 
     return $class->SUPER::_new( $str, @args );
 }
