@@ -3,6 +3,7 @@ Revision history for Perl module Net::WebSocket
 0.11 Sun Dec 17 2017
 - (Really) fix “large” frame size encoding on 32-bit perls, add test.
 - Check for warnings in tests.
+- Fix warning in 5.10 on length(undef)
 
 0.1 Fri Dec 15 2017
 - MINOR BREAKING: All messages are now Net::WebSocket::Message instances;
